# Educational_Platform_V1.0

./: README.md
Educational Platform/: CMakeLists.txt
Educational Platform/Database/: AssignmentsAnswers.txt  Courses.txt  Doctors.txt  Grades.txt  Lectures.txt  Students.txt
Educational Platform/Headers/: AssignmentAnswer.h  Course.h  Doctor.h  Student.h  System.h
Educational Platform/Source/: Doctor.cpp  Student.cpp  System.cpp  main.cpp
Student Grades Manger/Cpp_file/: Student_Grades_Manager.cpp
